The Advanced Forum Editor is now accessible via the Forum Manager. Renamed data.sql to mysql.sql Added a composite primary key to the forums_permissions table. Moved five more queries to the query generator. Revamped the query generator. Yesterday's commit was more of a prototype. Still lots to be done to facilitate all the queries. Added support for simple left joins to the query generator. Removed .smaller Fixed an issue with the permissions not saving with the Advanced Forum Editor.
Remind me to keep all generators away from Atom.

--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -636,7 +636,7 @@ button.username {
 	li a { font-size: 14px; }
 	ul { height: 26px; }
 	.menu_left, .menu_right { padding-right: 7px; }
-	.menu_create_topic { display: none; }
+	.menu_create_topic, .hide_on_mobile { display: none; }
 
 	.menu_alerts {
 		padding-left: 4px;
@@ -646,7 +646,6 @@ button.username {
 	}
 	.selectedAlert .alertList { top: 33px; }
 
-	.hide_on_mobile { display: none; }
 	.prev_button, .next_button { top: auto;bottom: 5px; }
 	.colstack_grid { grid-template-columns: none; grid-gap: 8px; }
 	.grid_istat { margin-bottom: 0px; }
@@ -672,7 +671,6 @@ button.username {
 		font-weight: bold;
 		white-space: normal;
 	}
-	.alertItem .text.smaller { font-size: 9px; }
 	.post_container { overflow: visible !important; }
 
 	.post_item {
