--- a/templates/menu.html
+++ b/templates/menu.html
@@ -15,7 +15,7 @@
 		<li class="menu_left menu_register"><a href="/accounts/create/">Register</a></li>
 		<li class="menu_left menu_login"><a href="/accounts/login/">Login</a></li>
 		{{end}}
-		<li class="menu_right menu_alerts">
+		<li id="general_alerts" class="menu_right menu_alerts">
 			<div class="alert_bell">🔔︎</div>
 			<div class="alert_counter"></div>
 			<div class="alertList"></div>
