Added the HeaderVars struct which is now used in the header template. The NoticeList field in the various page structs is now part of the HeaderVars struct. The Left / Right hotkeys will no longer take you to the next or previous page, if you have a textarea, input, or select element selected. Added the panel.css file. Added the PanelSessionCheck and SimplePanelSessionCheck functions. Reworked the ExtData field in the page structs, we'll have some hooks for you to inject stuff in here soon! Fixed a problem with the templates not getting remapped properly with Tempra Conflux when the compiled templates are missing. More Atom Madness.

--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,13 @@
 	<head>
 		<title>{{.Title}}</title>
 		<link href="/static/main.css" rel="stylesheet" type="text/css">
+		{{range .Header.Stylesheets}}
+		<link href="/static/{{.}}.css" rel="stylesheet" type="text/css">
+		{{end}}
 		<script type="text/javascript" src="/static/jquery-3.1.1.min.js"></script>
+		{{range .Header.Scripts}}
+		<script type="text/javascript" src="/static/{{.}}.js"></script>
+		{{end}}
 		<script type="text/javascript">var session = "{{.CurrentUser.Session}}";
 		</script>
 		<script type="text/javascript" src="/static/global.js"></script>
@@ -13,4 +19,4 @@
 		<div class="container">
 {{template "menu.html" .}}
 <div id="back"><div id="main">
-{{range .NoticeList}}<div class="alert">{{.}}</div>{{end}}
+{{range .Header.NoticeList}}<div class="alert">{{.}}</div>{{end}}
