Added an algorithm for sniffing out weak passwords upon registration. Themes can now inject their own stylesheets and JavaScript files into the header.
Added friendlier errors for developers / designers when something goes wrong in the system.
Moved three queries to the query generator.
_process_where() in the query generator now uses an arbitrary expression parser, thus allowing more complex constructs like IN.
Began work on the widget system.
Added SimpleLeftJoin and SimpleInnerJoin to the inline query builder.
Added SimpleInsertSelect and SimpleInsertInnerJoin to the query generator.
_process_columns() now supports parametisation.
Fixed a bug in _process_set() where _ was considered an invalid character in column names.
Fixed a typo in the interpreter template mapping for topics.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,7 @@
-		</div><div style="clear: both;"></div></div></div>
+					</div>
+				{{if .Header.Sidebars.Right}}<div class="sidebar">{{.Header.Sidebars.Right}}</div>{{end}}
+				<div style="clear: both;"></div>
+			</div>
+		</div>
 	</body>
 </html>
