--- a/templates/header.html
+++ b/templates/header.html
@@ -4,11 +4,11 @@
 		<title>{{.Title}}</title>
 		<link href="/static/main.css" rel="stylesheet" type="text/css">
 		{{range .Header.Stylesheets}}
-		<link href="/static/{{.}}.css" rel="stylesheet" type="text/css">
+		<link href="/static/{{.}}" rel="stylesheet" type="text/css">
 		{{end}}
 		<script type="text/javascript" src="/static/jquery-3.1.1.min.js"></script>
 		{{range .Header.Scripts}}
-		<script type="text/javascript" src="/static/{{.}}.js"></script>
+		<script type="text/javascript" src="/static/{{.}}"></script>
 		{{end}}
 		<script type="text/javascript">var session = "{{.CurrentUser.Session}}";
 		</script>
@@ -18,5 +18,5 @@
 	<body>
 		<div class="container">
 {{template "menu.html" .}}
-<div id="back"><div id="main">
+<div id="back"><div id="main" {{if .Header.Sidebars.Right}}class="shrink_main"{{end}}>
 {{range .Header.NoticeList}}<div class="alert">{{.}}</div>{{end}}
