--- a/templates/widget_simple.html
+++ b/templates/widget_simple.html
@@ -1,5 +1,5 @@
 <div class="rowblock">
-	<div class="rowitem">{{.Name}}</div>
+	<div class="rowitem rowhead">{{.Name}}</div>
 </div>
 <div class="rowblock">
 	<div class="rowitem">{{.Text}}</div>
