--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -527,132 +527,4 @@ button.username {
 	top: -2px;
 }
 
-/* The Media Queries */
-@media (max-width: 880px) {
-	li {
-		height: 29px;
-		font-size: 15px;
-		padding-left: 9px;
-		padding-top: 6px;
-		padding-bottom: 6px;
-	}
-	ul {
-		height: 30px;
-		margin-top: 8px;
-	}
-	.menu_left, .menu_right { padding-right: 9px; }
-	.menu_alerts {
-		padding-left: 7px;
-		padding-right: 7px;
-		font-size: 18px;
-	}
-
-	body {
-		padding-left: 4px;
-		padding-right: 4px;
-		margin: 0px !important;
-		width: 100% !important;
-		height: 100% !important;
-		overflow-x: hidden;
-	}
-	.container { width: auto; }
-	.selectedAlert .alertList { top: 37px; right: 4px; }
-}
-
-@media (max-width: 680px) {
-	li {
-		padding-left: 5px;
-		padding-top: 3px;
-		padding-bottom: 2px;
-		height: 25px;
-	}
-	li a { font-size: 14px; }
-	ul { height: 26px; }
-	.menu_left, .menu_right { padding-right: 7px; }
-	.menu_create_topic, .hide_on_mobile { display: none; }
-
-	.menu_alerts {
-		padding-left: 4px;
-		padding-right: 4px;
-		font-size: 16px;
-		padding-top: 1px;
-	}
-	.selectedAlert .alertList { top: 33px; }
-
-	.prev_button, .next_button { top: auto;bottom: 5px; }
-	.colstack_grid { grid-template-columns: none; grid-gap: 8px; }
-	.grid_istat { margin-bottom: 0px; }
-}
-
-@media (max-width: 470px) {
-	ul { margin-bottom: 10px; }
-	.menu_overview, .menu_profile, .hide_on_micro { display: none; }
-	.selectedAlert .alertList {
-		width: 156px;
-		margin-bottom: 5px;
-	}
-	.alertItem.withAvatar {
-		background-size: 36px;
-		text-align: center;
-		padding-left: 42px;
-		height: 46px;
-	}
-	.alertItem { padding: 8px; }
-	.alertItem .text {
-		height: 30px;
-		font-size: 10px;
-		font-weight: bold;
-		white-space: normal;
-	}
-	.post_container { overflow: visible !important; }
-
-	.post_item {
-		background-position: 0px 2px !important;
-		background-size: 64px 64px !important;
-		padding-left: 2px !important;
-		min-height: 96px;
-		position: relative !important;
-	}
-	.post_item > .user_content {
-		margin-left: 75px !important;
-		width: 100% !important;
-	}
-	.post_item > .mod_button {
-		float: right !important;
-		margin-left: 2px !important;
-		position: relative;
-		top: -14px;
-	}
-	.post_item > .real_username {
-		position: absolute;
-		top: 70px;
-		float: left;
-		margin-top: 0px;
-		padding-top: 3px !important;
-		margin-right: 2px;
-		width: 60px;
-		font-size: 15px;
-	}
-	.userinfo { width: 70px; }
-	.userinfo .avatar_item {
-		background-size: 64px;
-		width: 64px;
-		min-height: 64px;
-	}
-	.content_container {
-		margin-left: 73px;
-		min-height: inherit !important;
-	}
-	.user_content { min-height: 76.5px !important; font-size: 15px; }
-	.user_content.nobuttons { min-height: 100.5px !important; }
-	.the_name { font-size: 15px; }
-	.post_tag { font-size: 12px; }
-	.rowtopic { font-size: 14px; }
-
-	.container { width: 100% !important; }
-}
-
-@media (max-width: 330px) {
-	li { padding-left: 6px; }
-	.menu_left { padding-right: 6px; }
-}
+{{template "media.partial.css" }}
