--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -451,165 +451,4 @@ button.username { position: relative; top: -0.25px; }
 	top: -2px;
 }
 
-@media(min-width: 881px) {
-	.shrink_main {
-		float: left;
-		width: calc(75% - 12px);
-	}
-	.sidebar {
-		float: left;
-		width: 25%;
-		margin-left: 12px;
-	}
-}
-
-@media (max-width: 880px) {
-	li {
-		height: 29px;
-		font-size: 15px;
-		padding-left: 9px;
-		padding-top: 6px;
-		padding-bottom: 6px;
-	}
-	ul {
-		height: 30px;
-		margin-top: 8px;
-	}
-	.menu_left, .menu_right { padding-right: 9px; }
-	.menu_alerts {
-		padding-left: 7px;
-		padding-right: 7px;
-		font-size: 18px;
-	}
-
-	body {
-		padding-left: 4px;
-		padding-right: 4px;
-		margin: 0px !important;
-		width: 100% !important;
-		height: 100% !important;
-		overflow-x: hidden;
-	}
-	.container { width: auto; }
-	.sidebar { display: none; }
-	.selectedAlert .alertList { top: 37px; right: 4px; }
-}
-
-@media (max-width: 680px) {
-	li {
-		padding-left: 5px;
-		padding-top: 3px;
-		padding-bottom: 2px;
-		height: 25px;
-	}
-	li a { font-size: 14px; }
-	ul { height: 26px; }
-	.menu_left, .menu_right { padding-right: 7px; }
-	.menu_create_topic { display: none; }
-
-	.menu_alerts {
-		padding-left: 4px;
-		padding-right: 4px;
-		font-size: 16px;
-		padding-top: 1px;
-	}
-	.selectedAlert .alertList { top: 33px; }
-
-	.hide_on_mobile { display: none !important; }
-	.prev_button, .next_button { top: auto; bottom: 5px; }
-	.colstack_grid { grid-template-columns: none; grid-gap: 8px; }
-	.grid_istat { margin-bottom: 0px; }
-}
-
-@media (max-width: 470px) {
-	.menu_overview, .menu_profile { display: none; }
-	.selectedAlert .alertList {
-		width: 135px;
-		margin-bottom: 5px;
-	}
-	.selectedAlert.hasAvatars .alertList { width: calc(100% - 8px); }
-	.alertItem.withAvatar {
-		background-size: 36px;
-		text-align: right;
-		padding-left: 10px;
-		height: 46px;
-	}
-	.hasAvatars > .alertList > .alertItem.withAvatar {
-		background-size: 46px;
-		text-align: inherit;
-		padding-left: 56px;
-		height: 42px;
-	}
-	.alertItem { padding: 8px; }
-	.hasAvatars > .alertList > .alertItem { padding-top: 11px; }
-	.selectedAlert:not(.hasAvatars) > .alertList > .alertItem.withAvatar .text {
-		width: calc(100% - 20px);
-		height: 30px;
-		white-space: normal;
-	}
-	.selectedAlert:not(.hasAvatars) > .alertList > .alertItem .text {
-		font-size: 10px;
-		font-weight: bold;
-		margin-left: 0px;
-	}
-	.alertActive {
-		opacity: 0.7;
-	}
-
-	.hide_on_micro { display: none !important; }
-	.post_container { overflow: visible !important; }
-	.post_item:not(.action_item) {
-		background-position: 0px 2px !important;
-		background-size: 64px auto !important;
-		padding-left: 2px !important;
-		min-height: 96px;
-		position: relative !important;
-	}
-	.post_item > .user_content {
-		margin-left: 75px !important;
-		width: 100% !important;
-		min-height: 45px;
-	}
-	.post_item > .controls > .mod_button {
-		float: right !important;
-		margin-left: 2px !important;
-		margin-right: 3px;
-	}
-	.post_item > .controls > .mod_button > button {
-		opacity: 1;
-		padding-left: 3px;
-		padding-right: 3px;
-	}
-	.post_item > .controls > .real_username {
-		margin-top: 0px;
-		margin-right: 0px;
-		font-size: 15px;
-		color: black;
-		max-width: 61px;
-		text-overflow: ellipsis;
-	}
-	.post_item > .controls {
-		margin-top: 0px;
-		margin-left: 74px;
-		width: calc(100% - 74px);
-	}
-	.rowtopic {
-		font-size: 14px;
-	}
-	.container { width: 100% !important; }
-}
-
-@media (max-width: 330px) {
-	li { padding-left: 6px; }
-	.menu_left { padding-right: 6px; }
-	.post_item > .controls > .real_username {
-		display: inline-block;
-		overflow: hidden;
-		margin-right: -3px;
-		text-overflow: clip;
-		max-width: 84px;
-	}
-	.post_item > .controls { margin-left: 72px; }
-	.top_post > .post_item > .controls > .real_username { max-width: 57px; }
-	.top_post > .post_item { padding-right: 4px; }
-}
+{{template "media.partial.css" }}
